change in about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,9 @@
 
     <div class="main-content">
          {{>header}}
+         <p>This site is created by Montaser. This site uses data from mapbox and openweather api</p>
         <img class="portrait" src="/img/12.JPG">
+
     </div>
    
      {{>footer}}
